--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -293,6 +293,28 @@ repositories:
       url: https://github.com/ros/genpy.git
       version: kinetic-devel
     status: maintained
+  geometry:
+    doc:
+      type: git
+      url: https://github.com/ros/geometry.git
+      version: indigo-devel
+    release:
+      packages:
+      - eigen_conversions
+      - geometry
+      - kdl_conversions
+      - tf
+      - tf_conversions
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/geometry-release.git
+      version: 1.11.9-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/geometry.git
+      version: indigo-devel
+    status: maintained
   geometry2:
     doc:
       type: git
