--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -319,7 +319,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry2.git
-      version: indigo-devel
+      version: melodic-devel
     release:
       packages:
       - geometry2
@@ -341,7 +341,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/geometry2.git
-      version: indigo-devel
+      version: melodic-devel
     status: maintained
   gl_dependency:
     doc:
