geometry2: 0.6.1-0 in 'melodic/distribution.yaml' [bloom] (#17228)
* geometry2: 0.6.1-0 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -319,7 +319,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry2.git
-      version: indigo-devel
+      version: melodic-devel
     release:
       packages:
       - geometry2
@@ -336,12 +336,12 @@ repositories:
       tags:
         release: release/melodic/{package}/{version}
       url: https://github.com/ros-gbp/geometry2-release.git
-      version: 0.5.17-0
+      version: 0.6.1-0
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/geometry2.git
-      version: indigo-devel
+      version: melodic-devel
     status: maintained
   gl_dependency:
     doc:
