google-cloud-bigquery: add package in python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1194,6 +1194,13 @@ python-gnupg:
   fedora: [python-gnupg]
   gentoo: [dev-python/python-gnupg]
   ubuntu: [python-gnupg]
+python-google-cloud-bigquery-pip:
+  debian:
+    pip:
+      packages: [google-cloud-bigquery]
+  ubuntu:
+    pip:
+      packages: [google-cloud-bigquery]
 python-google-cloud-vision-pip:
   debian:
     pip:
