--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -889,6 +889,7 @@ repositories:
       url: https://github.com/ros-gbp/cartographer-release.git
       version: 0.2.0-1
     source:
+      test_commits: false
       type: git
       url: https://github.com/googlecartographer/cartographer.git
       version: master
