[cartographer] status developed as this package is sunder active development

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -311,7 +311,7 @@ repositories:
       type: git
       url: https://github.com/googlecartographer/cartographer.git
       version: master
-    status: maintained
+    status: developed
   cartographer_ros:
     doc:
       type: git
@@ -331,7 +331,7 @@ repositories:
       type: git
       url: https://github.com/googlecartographer/cartographer_ros.git
       version: master
-    status: maintained
+    status: developed
   catkin:
     doc:
       type: git
