--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2962,6 +2962,13 @@ libtesseract:
   fedora: [tesseract-devel]
   gentoo: [app-text/tesseract]
   ubuntu: [libtesseract-dev]
+libtclap-dev:
+  arch: [tclap]
+  debian: [libtclap-dev]
+  fedora: [tclap]
+  gentoo: [dev-cpp/tclap]
+  macports: [tclap]
+  ubuntu: [libtclap-dev]
 libtheora:
   arch: [libtheora]
   debian: [libtheora-dev]
