--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -255,6 +255,22 @@ repositories:
       url: https://github.com/ros/eigen_stl_containers.git
       version: master
     status: maintained
+  filters:
+    doc:
+      type: git
+      url: https://github.com/ros/filters.git
+      version: lunar-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/filters-release.git
+      version: 1.8.1-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/filters.git
+      version: lunar-devel
+    status: maintained
   gencpp:
     doc:
       type: git
