--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -16533,6 +16533,28 @@ repositories:
       url: https://github.com/jihoonl/waypoint.git
       version: master
     status: developed
+  web_interface:
+    release:
+      packages:
+      - image_stream
+      - launchman
+      - pyclearsilver
+      - ros_apache2
+      - rosjson
+      - rosweb
+      - web_interface
+      - web_msgs
+      - webui
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/UNR-RoboticsResearchLab/web_interface-release.git
+      version: 1.0.7-2
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/UNR-RoboticsResearchLab/web_interface.git
+      version: indigo-devel
+    status: maintained
   web_video_server:
     doc:
       type: git
