Keep source section for jsk_apc package

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -5529,6 +5529,13 @@ repositories:
       url: https://github.com/jsk-ros-pkg/jsk_3rdparty.git
       version: master
     status: developed
+  jsk_apc:
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/start-jsk/jsk_apc.git
+      version: master
+    status: developed
   jsk_common:
     doc:
       type: git
