--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7655,7 +7655,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/mikeferguson/robot_calibration.git
-      version: indigo-devel
+      version: kinetic-devel
     release:
       packages:
       - robot_calibration
@@ -7667,7 +7667,7 @@ repositories:
     source:
       type: git
       url: https://github.com/mikeferguson/robot_calibration.git
-      version: indigo-devel
+      version: kinetic-devel
     status: maintained
   robot_controllers:
     doc:
