--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -402,6 +402,21 @@ repositories:
       url: https://github.com/ros-geographic-info/geographic_info.git
       version: master
     status: maintained
+  geometric_shapes:
+    doc:
+      type: git
+      url: https://github.com/ros-planning/geometric_shapes.git
+      version: melodic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/geometric_shapes-release.git
+      version: 0.5.4-0
+    source:
+      type: git
+      url: https://github.com/ros-planning/geometric_shapes.git
+      version: melodic-devel
+    status: maintained
   geometry:
     doc:
       type: git
