--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3936,6 +3936,24 @@ repositories:
       url: https://github.com/tork-a/jskeus-release.git
       version: 1.1.0-0
     status: developed
+  json_transport:
+    doc:
+      type: git
+      url: https://github.com/locusrobotics/json_transport.git
+      version: devel
+    release:
+      packages:
+      - json_msgs
+      - json_transport
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/locusrobotics/json_transport-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/locusrobotics/json_transport.git
+      version: devel
+    status: developed
   katana_driver:
     doc:
       type: git
