--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -4131,6 +4131,27 @@ repositories:
       url: https://github.com/rst-tu-dortmund/teb_local_planner_tutorials.git
       version: lunar-devel
     status: developed
+  teleop_tools:
+    doc:
+      type: git
+      url: https://github.com/ros-teleop/teleop_tools.git
+      version: indigo-devel
+    release:
+      packages:
+      - joy_teleop
+      - key_teleop
+      - mouse_teleop
+      - teleop_tools
+      - teleop_tools_msgs
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/teleop_tools-release.git
+      version: 0.2.6-0
+    source:
+      type: git
+      url: https://github.com/ros-teleop/teleop_tools.git
+      version: indigo-devel
+    status: maintained
   towr:
     doc:
       type: git
