--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1525,6 +1525,11 @@ repositories:
       type: git
       url: https://github.com/ros-controls/urdf_geometry_parser.git
       version: kinetic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/urdf_geometry_parser-release.git
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros-controls/urdf_geometry_parser.git
