--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -291,6 +291,21 @@ repositories:
       url: https://github.com/ros/filters.git
       version: lunar-devel
     status: maintained
+  four_wheel_steering_msgs:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/four_wheel_steering_msgs.git
+      version: master
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-drivers-gbp/four_wheel_steering_msgs-release.git
+      version: 1.0.0-0
+    source:
+      type: git
+      url: https://github.com/ros-drivers/four_wheel_steering_msgs.git
+      version: master
+    status: maintained
   gencpp:
     doc:
       type: git
