radar_omnipresense-release: 0.0.1-2 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2594,6 +2594,15 @@ repositories:
       url: https://github.com/ros-visualization/qwt_dependency.git
       version: kinetic-devel
     status: maintained
+  radar_omnipresense-release:
+    release:
+      packages:
+      - radar_omnipresense
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/SCU-RSL-ROS/radar_omnipresense-release.git
+      version: 0.0.1-2
+    status: developed
   random_numbers:
     doc:
       type: git
