--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4275,6 +4275,11 @@ repositories:
       type: git
       url: https://github.com/AutonomyLab/libcreate.git
       version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/AutonomyLab/libcreate-release.git
+      version: 1.6.0-0
     source:
       type: git
       url: https://github.com/AutonomyLab/libcreate.git
