--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1505,6 +1505,11 @@ repositories:
       type: git
       url: https://github.com/AutonomyLab/libcreate.git
       version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/AutonomyLab/libcreate-release.git
+      version: 1.6.0-0
     source:
       type: git
       url: https://github.com/AutonomyLab/libcreate.git
