--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -12281,7 +12281,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/RobotWebTools/rosbridge_suite.git
-      version: master
+      version: indigo
     release:
       packages:
       - rosapi
@@ -12295,7 +12295,7 @@ repositories:
     source:
       type: git
       url: https://github.com/RobotWebTools/rosbridge_suite.git
-      version: develop
+      version: indigo
     status: maintained
   roscompile:
     doc:
