--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1795,6 +1795,7 @@ libglew-dev:
   fedora: [glew-devel]
   gentoo: [media-libs/glew]
   ubuntu:
+    bionic: [libglew-dev]
     oneiric: [libglew1.5-dev]
     precise: [libglew1.6-dev]
     quantal: [libglew-dev]
@@ -2301,6 +2302,7 @@ libopencv-dev:
   gentoo: [media-libs/opencv]
   macports: [opencv]
   ubuntu:
+    bionic: [libopencv-dev]
     saucy: [libopencv-dev]
     trusty: [libopencv-dev]
     utopic: [libopencv-dev]
