added keras to rosdep/python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1533,6 +1533,19 @@ python-kdtree:
   ubuntu:
     pip:
       packages: [kdtree]
+python-keras-pip:
+  debian:
+    pip:
+      packages: [keras]
+  fedora:
+    pip:
+      packages: [keras]
+  osx:
+    pip:
+      packages: [keras]
+  ubuntu:
+    pip:
+      packages: [keras]
 python-kitchen:
   arch: [python2-kitchen]
   debian: [python-kitchen]
