--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1100,7 +1100,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/ros_tutorials.git
-      version: lunar-devel
+      version: melodic-devel
     release:
       packages:
       - ros_tutorials
@@ -1115,7 +1115,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/ros_tutorials.git
-      version: lunar-devel
+      version: melodic-devel
     status: maintained
   rosbag_migration_rule:
     release:
