--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1100,7 +1100,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/ros_tutorials.git
-      version: lunar-devel
+      version: melodic-devel
     release:
       packages:
       - ros_tutorials
@@ -1110,12 +1110,12 @@ repositories:
       tags:
         release: release/melodic/{package}/{version}
       url: https://github.com/ros-gbp/ros_tutorials-release.git
-      version: 0.8.1-0
+      version: 0.9.0-0
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/ros_tutorials.git
-      version: lunar-devel
+      version: melodic-devel
     status: maintained
   rosbag_migration_rule:
     release:
