husky: 0.3.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3337,6 +3337,33 @@ repositories:
       url: https://github.com/ahornung/humanoid_msgs.git
       version: devel
     status: maintained
+  husky:
+    doc:
+      type: git
+      url: https://github.com/husky/husky.git
+      version: kinetic-devel
+    release:
+      packages:
+      - husky_base
+      - husky_bringup
+      - husky_control
+      - husky_description
+      - husky_desktop
+      - husky_gazebo
+      - husky_msgs
+      - husky_navigation
+      - husky_robot
+      - husky_simulator
+      - husky_viz
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/clearpath-gbp/husky-release.git
+      version: 0.3.0-0
+    source:
+      type: git
+      url: https://github.com/husky/husky.git
+      version: kinetic-devel
+    status: maintained
   ifm_o3mxxx:
     doc:
       type: git
