--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7790,6 +7790,26 @@ repositories:
       url: https://github.com/ridgeback/ridgeback_desktop.git
       version: kinetic-devel
     status: maintained
+  ridgeback_simulator:
+    doc:
+      type: git
+      url: https://github.com/ridgeback/ridgeback_simulator.git
+      version: kinetic-devel
+    release:
+      packages:
+      - mecanum_gazebo_plugin
+      - ridgeback_gazebo
+      - ridgeback_gazebo_plugins
+      - ridgeback_simulator
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/clearpath-gbp/ridgeback_simulator-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ridgeback/ridgeback_simulator.git
+      version: kinetic-devel
+    status: maintained
   robot_calibration:
     doc:
       type: git
