jackal_simulator: 0.3.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3744,6 +3744,24 @@ repositories:
       url: https://github.com/jackal/jackal_desktop.git
       version: kinetic-devel
     status: maintained
+  jackal_simulator:
+    doc:
+      type: git
+      url: https://github.com/jackal/jackal_simulator.git
+      version: kinetic-devel
+    release:
+      packages:
+      - jackal_gazebo
+      - jackal_simulator
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/clearpath-gbp/jackal_simulator-release.git
+      version: 0.3.0-0
+    source:
+      type: git
+      url: https://github.com/jackal/jackal_simulator.git
+      version: kinetic-devel
+    status: maintained
   jaguar:
     release:
       packages:
