--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8694,6 +8694,27 @@ repositories:
       url: https://github.com/easymov/ros_peerjs-release.git
       version: 0.1.8-0
     status: developed
+  ros_realtime:
+    doc:
+      type: git
+      url: https://github.com/ros/ros_realtime.git
+      version: hydro-devel
+    release:
+      packages:
+      - allocators
+      - lockfree
+      - ros_realtime
+      - rosatomic
+      - rosrt
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/ros_realtime-release.git
+      version: 1.0.25-0
+    source:
+      type: git
+      url: https://github.com/ros/ros_realtime.git
+      version: hydro-devel
+    status: unmaintained
   ros_tutorials:
     doc:
       type: git
